// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> is empty by default 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-htpNat eybErZ"
    >
      <styled.table>
        <table
          className="sc-bxivhb jcNPuI"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                   
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;

exports[`<Board /> is filled when the game has started 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        "E",
        "H",
        "R",
        "T",
      ],
      Immutable.List [
        "B",
        "I",
        "T",
        "E",
      ],
      Immutable.List [
        "G",
        "I",
        "S",
        "F",
      ],
      Immutable.List [
        "A",
        "M",
        "N",
        "O",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-htpNat eybErZ"
    >
      <styled.table>
        <table
          className="sc-bxivhb jcNPuI"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  E
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  H
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  R
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  T
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  B
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  T
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  E
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  G
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  S
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  F
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  A
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  M
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  N
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-ifAKCX eVSfyP"
                >
                  O
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;
